Closed
Bug 1482403
Opened 7 years ago
Closed 7 years ago
DigitalOcean map doesn't paint properly
Categories
(Core :: Web Painting, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox61 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | + | wontfix |
| firefox64 | --- | fixed |
| firefox65 | --- | verified |
People
(Reporter: jrmuizel, Assigned: mikokm)
References
(Blocks 1 open bug, )
Details
(Keywords: regression)
Attachments
(3 files)
Sometimes some of the blured shapes seem clipped. I suspect this is a regression from bug 1480620 or one of the other blob changes.
| Reporter | ||
Comment 1•7 years ago
|
||
The map I mean is at the bottom of https://www.digitalocean.com/
| Reporter | ||
Updated•7 years ago
|
Keywords: regressionwindow-wanted
| Reporter | ||
Updated•7 years ago
|
Blocks: stage-wr-trains
Comment 2•7 years ago
|
||
Greenland: It also seems to happen with Basic compositing, but not with Chrome Dev (HW accel on/off). I suspect layout.display-list.retain.
| Reporter | ||
Updated•7 years ago
|
Priority: -- → P3
Comment 3•7 years ago
|
||
Comment 4•7 years ago
|
||
mozregression --good 2018-07-01 --bad 2018-08-10 --pref gfx.webrender.all:true -a https://www.digitalocean.com/
> 7:35.14 INFO: Last good revision: 03ecdc85a12613b5fb79805c32a9896395351415
> 7:35.14 INFO: First bad revision: ae6e737276854a376177f2a64c15e9172e01ab8a
> 7:35.14 INFO: Pushlog:
> https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=03ecdc85a12613b5fb79805c32a9896395351415&tochange=ae6e737276854a376177f2a64c15e9172e01ab8a
> ae6e73727685 Matt Woodrow — Bug 1475413 - Prefer using old items for uninvalidated frames during display list merging. r=miko
Also happens without WebRender and can be fixed with layout.display-list.retain;false.
Has Regression Range: --- → yes
Has STR: --- → yes
status-firefox61:
--- → unaffected
status-firefox62:
--- → unaffected
status-firefox-esr52:
--- → unaffected
status-firefox-esr60:
--- → unaffected
Component: Graphics: WebRender → Layout: Web Painting
Flags: needinfo?(matt.woodrow)
Keywords: regressionwindow-wanted → regression
OS: Unspecified → All
Priority: P3 → --
Updated•7 years ago
|
Blocks: RDLbugs
status-firefox64:
--- → affected
Comment 5•7 years ago
|
||
This regression affects 63 and has no owner nor priority set, could this bug be prioritized? Thanks
Comment 6•7 years ago
|
||
Any chance you can take a look at this Miko?
The fix is either to add a new type to ShouldUseNewItem, or to mark the frame as modified when the property changes.
Should be able to look at the display list when it's broken and try spot which item is rendering wrong.
Flags: needinfo?(matt.woodrow) → needinfo?(mikokm)
Priority: -- → P2
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
| Assignee | ||
Comment 7•7 years ago
|
||
Minified testcase
| Assignee | ||
Updated•7 years ago
|
Priority: P2 → P1
Updated•7 years ago
|
| Assignee | ||
Comment 8•7 years ago
|
||
| Assignee | ||
Comment 9•7 years ago
|
||
Previously we did not always create nsDisplayOpacity, when creating nsDisplayFilter or nsDisplayMask for frames with opacity. Because this decision was made during DL building, and could change without frame invalidation, the retained display list merging would sometimes get confused when the container item type changed.
This patch always wraps frames with visual opacity in nsDisplayOpacity, unless the frame is an SVG frame that supports optimizing stroke/fill opacity, or if the frame is an SVGImage frame.
For most cases, the performance penalty should be minimal. The common case is that nsDisplayOpacity passes opacity handling to nsDisplayMasksAndClipPaths or nsDisplayFilters though opacity flattening mechanics.
Comment 10•7 years ago
|
||
Miko, do you have a status update on this issue? thanks
Flags: needinfo?(mikokm)
| Assignee | ||
Comment 11•7 years ago
|
||
(In reply to Pascal Chevrel:pascalc from comment #10)
> Miko, do you have a status update on this issue? thanks
The patch is ready and waiting for a review.
Flags: needinfo?(mikokm)
Comment 12•7 years ago
|
||
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/1feb8b3f06e7
Always create nsDisplayOpacity for filters and masks when there is visual opacity r=jwatt
Comment 13•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment 14•7 years ago
|
||
Is it possible to write a test for this?
Flags: needinfo?(mikokm)
Flags: in-testsuite?
| Assignee | ||
Comment 15•7 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #14)
> Is it possible to write a test for this?
The original "simplified" testcase was very complex (due to 300KB of minified JS applying unpredictable style changes), but I will look into it.
Flags: needinfo?(mikokm)
Comment 16•7 years ago
|
||
Too late for 63.
Comment 18•7 years ago
|
||
Bug 1503601 has a much simpler test-case that was fixed by this patch, any chance we could land something based on that?
Flags: needinfo?(mikokm)
| Assignee | ||
Comment 19•7 years ago
|
||
Thank you Emilio, I used that testcase to create a reftest.
Flags: needinfo?(mikokm)
Comment 20•7 years ago
|
||
[Tracking Requested - why for this release]: We're getting quite a few dupes of this bug, would be nice if it could be fixed if there's any 63 ridealong.
tracking-firefox63:
--- → ?
Comment 21•7 years ago
|
||
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5690f5bfcd08
Add reftest r=me
Comment 22•7 years ago
|
||
| bugherder | ||
Comment 23•7 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #20)
> [Tracking Requested - why for this release]: We're getting quite a few dupes
> of this bug, would be nice if it could be fixed if there's any 63 ridealong.
This has only recently landed and was not uplifted to beta yet so that will probably not make it into the dot release for Desktop planned for this week. I am tracking it though in case we have another dot release before we ship 64.
Updated•7 years ago
|
Comment 25•7 years ago
|
||
Wontfix for 63 as we are unlikely to have another dot release before 64 ships 3 weeks from now.
Updated•6 years ago
|
Flags: qe-verify+
Comment 26•6 years ago
|
||
I reproduced this issue using Fx 63.0a1, build ID: 20180810220115, on Windows 10 x64 and Ubuntu 18.04 x64.
I can confirm this issue is fixed, I verified using Fx 65.0b9, build ID: 20190107180200, on Windows 10 x64 and Ubuntu 18.04 LTS.
You need to log in
before you can comment on or make changes to this bug.
Description
•