Bug 1482403 - Always create nsDisplayOpacity for filters and masks when there is visual opacity r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D7183